syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "EpisodicContextReportType";

import "sdc/biceps/abstractcontextreport.proto";

  message EpisodicContextReport {
    AbstractContextReport abstract_context_report = 1;
  }
