syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "EpisodicMetricReportType";

import "sdc/biceps/abstractmetricreport.proto";

  message EpisodicMetricReport {
    AbstractMetricReport abstract_metric_report = 1;
  }
