syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "EpisodicOperationalStateReportType";

import "sdc/biceps/abstractoperationalstatereport.proto";

  message EpisodicOperationalStateReport {
    AbstractOperationalStateReport abstract_operational_state_report = 1;
  }
