syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "WaveformStreamType";

import "sdc/biceps/abstractreport.proto";
import "sdc/biceps/realtimesamplearraymetricstate.proto";

  message WaveformStream {
    AbstractReport abstract_report = 1;
    RealTimeSampleArrayMetricState state = 2;
  }
